@@ -133,7 +133,7 @@ public class OportunidadController {
     @ExceptionHandler(MethodValidationException.class)
     public ResponseEntity<ErrorResponseDTO> handleValidationExceptions(
             MethodArgumentNotValidException ex) {
-      String message = ex. getBindingResult().getAllErrors().getFirst().getDefaultMessage();
+      String message = ex. getBindingResult().getAllErrors().get(0).getDefaultMessage();
       return  ResponseEntity.badRequest()
               .body(new ErrorResponseDTO(message, "VALIDATION_ERROR"));
     }
